# getter-methods

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yaml  release.yaml
examples/: arc.rs  box.rs  option.rs  rc.rs  ref.rs  string.rs  vec.rs  vis.rs
src/: lib.rs
