[package]
name = "getter-methods"
version = "2.0.2"
edition = "2024"
rust-version = "1.87"
authors = ["Luke Sneeringer <luke@sneeringer.com>"]
description = "Derive macro to create getter / accessor methods."
license = "MIT"
repository = "https://github.com/lukesneeringer/getter-methods"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
assert2 = "0.3"

[lib]
proc-macro = true
